fix: left-text spacing

--- a/css/index.css
+++ b/css/index.css
@@ -346,8 +346,7 @@ body{
     }
     .left p {
         display: block;
-        text-align:justify;
-        text-indent: 50px;
+        text-align: justify;
         font-size: 25px;
         margin-top: 20px;
         color: whitesmoke
@@ -358,7 +357,7 @@ body{
         border-radius: 5px;
         font-size: 80px;
         text-align: center;
-        margin-top: 80px;
+        margin-top: 50px;
     }
 
 #project-container{
